@@ -1,24 +1,17 @@
 /**
- * The contents of this file are subject to the OpenMRS Public License
- * Version 1.0 (the "License"); you may not use this file except in
- * compliance with the License. You may obtain a copy of the License at
- * http://license.openmrs.org
+ * This Source Code Form is subject to the terms of the Mozilla Public License,
+ * v. 2.0. If a copy of the MPL was not distributed with this file, You can
+ * obtain one at http://mozilla.org/MPL/2.0/. OpenMRS is also distributed under
+ * the terms of the Healthcare Disclaimer located at http://openmrs.org/license.
  *
- * Software distributed under the License is distributed on an "AS IS"
- * basis, WITHOUT WARRANTY OF ANY KIND, either express or implied. See the
- * License for the specific language governing rights and limitations
- * under the License.
- *
- * Copyright (C) OpenMRS, LLC.  All Rights Reserved.
+ * Copyright (C) OpenMRS Inc. OpenMRS is a registered trademark and the OpenMRS
+ * graphic logo is a trademark of OpenMRS Inc.
  */
 package org.openmrs.util;
 
-import java.beans.IntrospectionException;
-import java.beans.PropertyDescriptor;
 import java.io.BufferedInputStream;
 import java.io.BufferedOutputStream;
 import java.io.BufferedReader;
-import java.io.BufferedWriter;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.Closeable;
@@ -33,13 +26,13 @@ import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.io.OutputStreamWriter;
 import java.io.UnsupportedEncodingException;
-import java.io.Writer;
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.Charset;
 import java.sql.Timestamp;
 import java.text.DateFormat;
 import java.text.SimpleDateFormat;
@@ -57,10 +50,9 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Properties;
+import java.util.Random;
 import java.util.Set;
-import java.util.SortedSet;
 import java.util.StringTokenizer;
-import java.util.TreeSet;
 import java.util.Vector;
 import java.util.jar.JarFile;
 import java.util.regex.Matcher;
@@ -68,6 +60,7 @@ import java.util.regex.Pattern;
 import java.util.regex.PatternSyntaxException;
 import java.util.zip.ZipEntry;
 
+import javax.activation.MimetypesFileTypeMap;
 import javax.xml.transform.OutputKeys;
 import javax.xml.transform.Transformer;
 import javax.xml.transform.TransformerException;
@@ -107,8 +100,6 @@ import org.openmrs.api.PatientService;
 import org.openmrs.api.ShortPasswordException;
 import org.openmrs.api.WeakPasswordException;
 import org.openmrs.api.context.Context;
-import org.openmrs.cohort.CohortSearchHistory;
-import org.openmrs.logic.LogicCriteria;
 import org.openmrs.module.ModuleException;
 import org.openmrs.module.ModuleFactory;
 import org.openmrs.patient.IdentifierValidator;
@@ -121,12 +112,6 @@ import org.openmrs.propertyeditor.LocationEditor;
 import org.openmrs.propertyeditor.PersonAttributeTypeEditor;
 import org.openmrs.propertyeditor.ProgramEditor;
 import org.openmrs.propertyeditor.ProgramWorkflowStateEditor;
-import org.openmrs.report.EvaluationContext;
-import org.openmrs.reporting.CohortFilter;
-import org.openmrs.reporting.PatientFilter;
-import org.openmrs.reporting.PatientSearch;
-import org.openmrs.reporting.PatientSearchReportObject;
-import org.openmrs.reporting.SearchArgument;
 import org.openmrs.xml.OpenmrsCycleStrategy;
 import org.simpleframework.xml.Serializer;
 import org.simpleframework.xml.load.Persister;
@@ -223,7 +208,7 @@ public class OpenmrsUtil {
 	
 	/**
 	 * Compares origList to newList returning map of differences
-	 *
+	 * 
 	 * @param origList
 	 * @param newList
 	 * @return [List toAdd, List toDelete] with respect to origList
@@ -308,7 +293,7 @@ public class OpenmrsUtil {
 	
 	/**
 	 * Return a string representation of the given file
-	 *
+	 * 
 	 * @param file
 	 * @return String file contents
 	 * @throws IOException
@@ -329,7 +314,7 @@ public class OpenmrsUtil {
 	
 	/**
 	 * Return a byte array representation of the given file
-	 *
+	 * 
 	 * @param file
 	 * @return byte[] file contents
 	 * @throws IOException
@@ -362,7 +347,7 @@ public class OpenmrsUtil {
 	/**
 	 * Copy file from inputStream onto the outputStream inputStream is not closed in this method
 	 * outputStream /is/ closed at completion of this method
-	 *
+	 * 
 	 * @param inputStream Stream to copy from
 	 * @param outputStream Stream/location to copy to
 	 * @throws IOException thrown if an error occurs during read/write
@@ -410,8 +395,19 @@ public class OpenmrsUtil {
 	}
 	
 	/**
-	 * Look for a file named <code>filename</code> in folder
+	 * Get mime type of the given file
 	 *
+	 * @param file
+	 * @return mime type
+	 */
+	public static String getFileMimeType(File file) {
+		MimetypesFileTypeMap mimeMap = new MimetypesFileTypeMap();
+		return mimeMap.getContentType(file);
+	}
+	
+	/**
+	 * Look for a file named <code>filename</code> in folder
+	 * 
 	 * @param folder
 	 * @param filename
 	 * @return true/false whether filename exists in folder
@@ -437,7 +433,7 @@ public class OpenmrsUtil {
 	 * {@link AddOnStartup} to know which privs, upon startup or loading of a module, to insert into
 	 * the database if they do not exist already. These privileges are not allowed to be deleted.
 	 * They are marked as 'locked' in the administration screens.
-	 *
+	 * 
 	 * @return privileges core to the system
 	 * @see PrivilegeConstants
 	 * @see Context#checkCoreDataset()
@@ -446,10 +442,10 @@ public class OpenmrsUtil {
 		Map<String, String> corePrivileges = new HashMap<String, String>();
 		
 		// TODO getCorePrivileges() is called so so many times that getClassesWithAnnotation() better do some catching.
-		List<Class<?>> classes = OpenmrsClassScanner.getInstance().getClassesWithAnnotation(HasAddOnStartupPrivileges.class);
+		Set<Class<?>> classes = OpenmrsClassScanner.getInstance().getClassesWithAnnotation(HasAddOnStartupPrivileges.class);
 		
 		for (Class cls : classes) {
-			Field flds[] = cls.getDeclaredFields();
+			Field[] flds = cls.getDeclaredFields();
 			for (Field fld : flds) {
 				String fieldValue = null;
 				
@@ -482,13 +478,13 @@ public class OpenmrsUtil {
 	/**
 	 * All roles returned by this method are inserted into the database if they do not exist
 	 * already. These roles are also forbidden to be deleted from the administration screens.
-	 *
+	 * 
 	 * @return roles that are core to the system
 	 */
 	public static Map<String, String> getCoreRoles() {
 		Map<String, String> roles = new HashMap<String, String>();
 		
-		Field flds[] = RoleConstants.class.getDeclaredFields();
+		Field[] flds = RoleConstants.class.getDeclaredFields();
 		for (Field fld : flds) {
 			String fieldValue = null;
 			
@@ -514,7 +510,7 @@ public class OpenmrsUtil {
 	
 	/**
 	 * Initialize global settings Find and load modules
-	 *
+	 * 
 	 * @param p properties from runtime configuration
 	 */
 	public static void startup(Properties p) {
@@ -573,12 +569,6 @@ public class OpenmrsUtil {
 		}
 		OpenmrsConstants.DATABASE_BUSINESS_NAME = val;
 		
-		// set the application data directory
-		val = p.getProperty(OpenmrsConstants.APPLICATION_DATA_DIRECTORY_RUNTIME_PROPERTY, null);
-		if (val != null) {
-			OpenmrsConstants.APPLICATION_DATA_DIRECTORY = val;
-		}
-		
 		// set global log level
 		applyLogLevels();
 		
@@ -607,7 +597,7 @@ public class OpenmrsUtil {
 	
 	/**
 	 * Setup root level log appenders.
-	 *
+	 * 
 	 * @since 1.9.2
 	 */
 	public static void setupLogAppenders() {
@@ -648,7 +638,7 @@ public class OpenmrsUtil {
 	
 	/**
 	 * Set the log4j log level for class <code>logClass</code> to <code>logLevel</code>.
-	 *
+	 * 
 	 * @param logClass optional string giving the class level to change. Defaults to
 	 *            OpenmrsConstants.LOG_CLASS_DEFAULT . Should be something like org.openmrs.___
 	 * @param logLevel one of OpenmrsConstants.LOG_LEVEL_*
@@ -658,7 +648,7 @@ public class OpenmrsUtil {
 		if (logLevel != null) {
 			
 			// the default log level is org.openmrs
-			if (logClass == null || "".equals(logClass)) {
+			if (StringUtils.isEmpty(logClass)) {
 				logClass = OpenmrsConstants.LOG_CLASS_DEFAULT;
 			}
 			
@@ -687,7 +677,7 @@ public class OpenmrsUtil {
 	/**
 	 * Takes a String like "size=compact|order=date" and returns a Map<String,String> from the keys
 	 * to the values.
-	 *
+	 * 
 	 * @param paramList <code>String</code> with a list of parameters
 	 * @return Map<String, String> of the parameters passed
 	 */
@@ -829,7 +819,7 @@ public class OpenmrsUtil {
 	
 	/**
 	 * Converts a collection to a String with a specified separator between all elements
-	 *
+	 * 
 	 * @param c Collection to be joined
 	 * @param separator string to put between all elements
 	 * @return a String representing the toString() of all elements in c, separated by separator
@@ -886,7 +876,7 @@ public class OpenmrsUtil {
 	
 	/**
 	 * Also see TRUNK-3665
-	 *
+	 * 
 	 * @deprecated replaced by {@link #delimitedStringToConceptList(String, String)}
 	 */
 	@Deprecated
@@ -896,7 +886,7 @@ public class OpenmrsUtil {
 	
 	/**
 	 * Parses and loads a delimited list of concept ids or names
-	 *
+	 * 
 	 * @param delimitedString the delimited list of concept ids or names
 	 * @param delimiter the delimiter, e.g. ","
 	 * @return the list of concepts
@@ -911,7 +901,7 @@ public class OpenmrsUtil {
 				Integer conceptId = null;
 				
 				try {
-					conceptId = new Integer(token);
+					conceptId = Integer.valueOf(token);
 				}
 				catch (NumberFormatException nfe) {
 					conceptId = null;
@@ -964,7 +954,7 @@ public class OpenmrsUtil {
 		Integer conceptId = null;
 		
 		try {
-			conceptId = new Integer(idOrName);
+			conceptId = Integer.valueOf(idOrName);
 		}
 		catch (NumberFormatException nfe) {
 			conceptId = null;
@@ -1018,7 +1008,7 @@ public class OpenmrsUtil {
 	/**
 	 * Return a date that is the same day as the passed in date, but the hours and seconds are the
 	 * latest possible for that day.
-	 *
+	 * 
 	 * @param date date to adjust
 	 * @return a date that is the last possible time in the day
 	 * @deprecated use {@link #getLastMomentOfDay(Date)}
@@ -1043,7 +1033,7 @@ public class OpenmrsUtil {
 	/**
 	 * Gets the date having the last millisecond of a given day. Meaning that the hours, seconds,
 	 * and milliseconds are the latest possible for that day.
-	 *
+	 * 
 	 * @param day the day.
 	 * @return the date with the last millisecond of the day.
 	 */
@@ -1061,7 +1051,7 @@ public class OpenmrsUtil {
 	/**
 	 * Return a date that is the same day as the passed in date, but the hours and seconds are the
 	 * earliest possible for that day.
-	 *
+	 * 
 	 * @param date date to adjust
 	 * @return a date that is the first possible time in the day
 	 * @since 1.9
@@ -1087,7 +1077,7 @@ public class OpenmrsUtil {
 	
 	/**
 	 * Recursively deletes files in the given <code>dir</code> folder
-	 *
+	 * 
 	 * @param dir File directory to delete
 	 * @return true/false whether the delete was completed successfully
 	 * @throws IOException if <code>dir</code> is not a directory
@@ -1133,7 +1123,7 @@ public class OpenmrsUtil {
 	
 	/**
 	 * Utility method to convert local URL to a File object.
-	 *
+	 * 
 	 * @param url an URL
 	 * @return file object for given URL or <code>null</code> if URL is not local
 	 * @should return null given null parameter
@@ -1156,7 +1146,7 @@ public class OpenmrsUtil {
 	 * API.</li>
 	 * </ul>
 	 * It is not recommended to use this method for big resources within JAR files.
-	 *
+	 * 
 	 * @param url resource URL
 	 * @return input stream for given resource
 	 * @throws IOException if any I/O error has occurred
@@ -1207,31 +1197,43 @@ public class OpenmrsUtil {
 	/**
 	 * <pre>
 	 * Returns the application data directory. Searches for the value first 
-	 * in the "application_data_directory" runtime property, then in the servlet
+	 * in the "OPENMRS_APPLICATION_DATA_DIRECTORY" system property and "application_data_directory" runtime property, then in the servlet
 	 * init parameter "application.data.directory." If not found, returns:
 	 * a) "{user.home}/.OpenMRS" on UNIX-based systems
 	 * b) "{user.home}\Application Data\OpenMRS" on Windows
-	 *
-	 * Path can be set via systemproperty OPENMRS_APPLICATION_DATA_DIRECTORY
-	 * for development purposes.
+	 * 
 	 * </pre>
-	 *
+	 * 
 	 * @return The path to the directory on the file system that will hold miscellaneous data about
 	 *         the application (runtime properties, modules, etc)
 	 */
 	public static String getApplicationDataDirectory() {
+		String filepath = OpenmrsConstants.APPLICATION_DATA_DIRECTORY;
 		
-		String filepath = null;
-		if (System.getProperty("OPENMRS_APPLICATION_DATA_DIRECTORY") != null) {
-			filepath = System.getProperty("OPENMRS_APPLICATION_DATA_DIRECTORY");
+		String systemProperty = System.getProperty("OPENMRS_APPLICATION_DATA_DIRECTORY");
+		//System and runtime property take precedence
+		if (systemProperty != null) {
+			filepath = systemProperty;
 		} else {
-			
-			if (OpenmrsConstants.APPLICATION_DATA_DIRECTORY != null) {
-				filepath = OpenmrsConstants.APPLICATION_DATA_DIRECTORY;
+			String runtimeProperty = Context.getRuntimeProperties().getProperty(
+			    OpenmrsConstants.APPLICATION_DATA_DIRECTORY_RUNTIME_PROPERTY, null);
+			if (runtimeProperty != null) {
+				filepath = runtimeProperty;
+			}
+		}
+		
+		if (filepath == null) {
+			if (OpenmrsConstants.UNIX_BASED_OPERATING_SYSTEM) {
+				filepath = System.getProperty("user.home") + File.separator + ".OpenMRS";
+				if (!canWrite(new File(filepath))) {
+					log.warn("Unable to write to users home dir, fallback to: "
+					        + OpenmrsConstants.APPLICATION_DATA_DIRECTORY_FALLBACK_UNIX);
+					filepath = OpenmrsConstants.APPLICATION_DATA_DIRECTORY_FALLBACK_UNIX + File.separator + "OpenMRS";
+				}
 			} else {
 				if (OpenmrsConstants.UNIX_BASED_OPERATING_SYSTEM) {
 					filepath = System.getProperty("user.home") + File.separator + ".OpenMRS";
-					if (!(new File(filepath)).canWrite()) {
+					if (!canWrite(new File(filepath))) {
 						log.warn("Unable to write to users home dir, fallback to: "
 						        + OpenmrsConstants.APPLICATION_DATA_DIRECTORY_FALLBACK_UNIX);
 						filepath = OpenmrsConstants.APPLICATION_DATA_DIRECTORY_FALLBACK_UNIX + File.separator + "OpenMRS";
@@ -1239,15 +1241,15 @@ public class OpenmrsUtil {
 				} else {
 					filepath = System.getProperty("user.home") + File.separator + "Application Data" + File.separator
 					        + "OpenMRS";
-					if (!(new File(filepath)).canWrite()) {
+					if (!canWrite(new File(filepath))) {
 						log.warn("Unable to write to users home dir, fallback to: "
 						        + OpenmrsConstants.APPLICATION_DATA_DIRECTORY_FALLBACK_WIN);
 						filepath = OpenmrsConstants.APPLICATION_DATA_DIRECTORY_FALLBACK_WIN + File.separator + "OpenMRS";
 					}
 				}
-				
-				filepath = filepath + File.separator;
 			}
+			
+			filepath = filepath + File.separator;
 		}
 		
 		File folder = new File(filepath);
@@ -1255,12 +1257,50 @@ public class OpenmrsUtil {
 			folder.mkdirs();
 		}
 		
+		OpenmrsConstants.APPLICATION_DATA_DIRECTORY = filepath;
+		
 		return filepath;
 	}
 	
 	/**
+	 * Can be used to override default application data directory.
+	 * <p>
+	 * Note that it will not override application data directory provided as a system property.
+	 * 
+	 * @param path
+	 * @since 1.11
+	 */
+	public static void setApplicationDataDirectory(String path) {
+		OpenmrsConstants.APPLICATION_DATA_DIRECTORY = path;
+	}
+	
+	/**
+	 * Checks if we can write to a given folder.
+	 * 
+	 * @param folder the directory to check.
+	 * @return true if we can write to it, else false.
+	 */
+	private static boolean canWrite(File folder) {
+		try {
+			//We need to first create the folder if it does not exist, 
+			//else File.canWrite() will return false even when we
+			//have the necessary permissions.
+			if (!folder.exists()) {
+				folder.mkdirs();
+			}
+			
+			return folder.canWrite();
+		}
+		catch (SecurityException ex) {
+			//all we wanted to know is whether we have permissions
+		}
+		
+		return false;
+	}
+	
+	/**
 	 * Returns the location of the OpenMRS log file.
-	 *
+	 * 
 	 * @return the path to the OpenMRS log file
 	 * @since 1.9.2
 	 */
@@ -1274,12 +1314,12 @@ public class OpenmrsUtil {
 	
 	/**
 	 * Checks whether the current JVM version is at least Java 6.
-	 *
+	 * 
 	 * @throws ApplicationContextException if the current JVM version is earlier than Java 6
 	 */
 	public static void validateJavaVersion() {
 		// check whether the current JVM version is at least Java 6
-		if (JdkVersion.getMajorJavaVersion() < JdkVersion.JAVA_16) {
+		if (JdkVersion.getJavaVersion().matches("1.(0|1|2|3|4|5).(.*)")) {
 			throw new APIException("OpenMRS requires Java 6, but is running under " + JdkVersion.getJavaVersion());
 		}
 	}
@@ -1287,7 +1327,7 @@ public class OpenmrsUtil {
 	/**
 	 * Find the given folderName in the application data directory. Or, treat folderName like an
 	 * absolute url to a directory
-	 *
+	 * 
 	 * @param folderName
 	 * @return folder capable of storing information
 	 */
@@ -1309,7 +1349,7 @@ public class OpenmrsUtil {
 		}
 		
 		if (!folder.isDirectory()) {
-			throw new APIException("'" + folder.getAbsolutePath() + "' should be a directory but it is not");
+			throw new APIException("should.be.directory", new Object[] { folder.getAbsolutePath() });
 		}
 		
 		return folder;
@@ -1317,7 +1357,7 @@ public class OpenmrsUtil {
 	
 	/**
 	 * Save the given xml document to the given outfile
-	 *
+	 * 
 	 * @param doc Document to be saved
 	 * @param outFile file pointer to the location the xml file is to be saved to
 	 */
@@ -1373,7 +1413,7 @@ public class OpenmrsUtil {
 	
 	/**
 	 * Tests if the given String starts with any of the specified prefixes
-	 *
+	 * 
 	 * @param str the string to test
 	 * @param prefixes an array of prefixes to test against
 	 * @return true if the String starts with any of the specified prefixes, otherwise false.
@@ -1482,7 +1522,7 @@ public class OpenmrsUtil {
 	/**
 	 * Get the current user's date format Will look similar to "mm-dd-yyyy". Depends on user's
 	 * locale.
-	 *
+	 * 
 	 * @return a simple date format
 	 * @deprecated use {@link Context#getDateFormat()} or {@link
 	 *             #getDateFormat(Context#getLocale())} instead
@@ -1495,7 +1535,7 @@ public class OpenmrsUtil {
 	/**
 	 * Get the current user's date format Will look similar to "mm-dd-yyyy". Depends on user's
 	 * locale.
-	 *
+	 * 
 	 * @return a simple date format
 	 * @should return a pattern with four y characters in it
 	 * @should not allow the returned SimpleDateFormat to be modified
@@ -1534,7 +1574,7 @@ public class OpenmrsUtil {
 	
 	/**
 	 * Get the current user's time format Will look similar to "hh:mm a". Depends on user's locale.
-	 *
+	 * 
 	 * @return a simple time format
 	 * @should return a pattern with two h characters in it
 	 * @should not allow the returned SimpleDateFormat to be modified
@@ -1562,7 +1602,7 @@ public class OpenmrsUtil {
 	/**
 	 * Get the current user's datetime format Will look similar to "mm-dd-yyyy hh:mm a". Depends on
 	 * user's locale.
-	 *
+	 * 
 	 * @return a simple date format
 	 * @should return a pattern with four y characters and two h characters in it
 	 * @should not allow the returned SimpleDateFormat to be modified
@@ -1582,16 +1622,8 @@ public class OpenmrsUtil {
 	}
 	
 	/**
-	 * @deprecated see reportingcompatibility module
-	 */
-	@Deprecated
-	public static PatientFilter toPatientFilter(PatientSearch search, CohortSearchHistory history) {
-		return toPatientFilter(search, history, null);
-	}
-	
-	/**
 	 * Takes a String (e.g. a user-entered one) and parses it into an object of the specified class
-	 *
+	 * 
 	 * @param string
 	 * @param clazz
 	 * @return Object of type <code>clazz</code> with the data from <code>string</code>
@@ -1683,230 +1715,12 @@ public class OpenmrsUtil {
 	}
 	
 	/**
-	 * Uses reflection to translate a PatientSearch into a PatientFilter
-	 *
-	 * @deprecated see reportingcompatibility module
-	 */
-	@SuppressWarnings("unchecked")
-	@Deprecated
-	public static PatientFilter toPatientFilter(PatientSearch search, CohortSearchHistory history,
-	        EvaluationContext evalContext) {
-		if (search.isSavedSearchReference()) {
-			PatientSearch ps = ((PatientSearchReportObject) Context.getReportObjectService().getReportObject(
-			    search.getSavedSearchId())).getPatientSearch();
-			return toPatientFilter(ps, history, evalContext);
-		} else if (search.isSavedFilterReference()) {
-			return Context.getReportObjectService().getPatientFilterById(search.getSavedFilterId());
-		} else if (search.isSavedCohortReference()) {
-			Cohort c = Context.getCohortService().getCohort(search.getSavedCohortId());
-			// to prevent lazy loading exceptions, cache the member ids here
-			if (c != null) {
-				c.getMemberIds().size();
-			}
-			return new CohortFilter(c);
-		} else if (search.isComposition()) {
-			if (history == null && search.requiresHistory()) {
-				throw new IllegalArgumentException("You can't evaluate this search without a history");
-			} else {
-				return search.cloneCompositionAsFilter(history, evalContext);
-			}
-		} else {
-			Class clz = search.getFilterClass();
-			if (clz == null) {
-				throw new IllegalArgumentException("search must be saved, composition, or must have a class specified");
-			}
-			log.debug("About to instantiate " + clz);
-			PatientFilter pf = null;
-			try {
-				pf = (PatientFilter) clz.newInstance();
-			}
-			catch (Exception ex) {
-				log.error("Couldn't instantiate a " + search.getFilterClass(), ex);
-				return null;
-			}
-			Class[] stringSingleton = { String.class };
-			if (search.getArguments() != null) {
-				for (SearchArgument sa : search.getArguments()) {
-					if (log.isDebugEnabled()) {
-						log.debug("Looking at (" + sa.getPropertyClass() + ") " + sa.getName() + " -> " + sa.getValue());
-					}
-					PropertyDescriptor pd = null;
-					try {
-						pd = new PropertyDescriptor(sa.getName(), clz);
-					}
-					catch (IntrospectionException ex) {
-						log.error("Error while examining property " + sa.getName(), ex);
-						continue;
-					}
-					Class<?> realPropertyType = pd.getPropertyType();
-					
-					// instantiate the value of the search argument
-					String valueAsString = sa.getValue();
-					String testForExpression = search.getArgumentValue(sa.getName());
-					if (testForExpression != null) {
-						log.debug("Setting " + sa.getName() + " to: " + testForExpression);
-						if (evalContext != null && EvaluationContext.isExpression(testForExpression)) {
-							Object evaluated = evalContext.evaluateExpression(testForExpression);
-							if (evaluated != null) {
-								if (evaluated instanceof Date) {
-									valueAsString = Context.getDateFormat().format((Date) evaluated);
-								} else {
-									valueAsString = evaluated.toString();
-								}
-							}
-							log.debug("Evaluated " + sa.getName() + " to: " + valueAsString);
-						}
-					}
-					
-					Object value = null;
-					Class<?> valueClass = sa.getPropertyClass();
-					try {
-						// If there's a valueOf(String) method, just use that
-						// (will cover at least String, Integer, Double,
-						// Boolean)
-						Method valueOfMethod = null;
-						try {
-							valueOfMethod = valueClass.getMethod("valueOf", stringSingleton);
-						}
-						catch (NoSuchMethodException ex) {}
-						if (valueOfMethod != null) {
-							Object[] holder = { valueAsString };
-							value = valueOfMethod.invoke(pf, holder);
-						} else if (realPropertyType.isEnum()) {
-							// Special-case for enum types
-							List<Enum> constants = Arrays.asList((Enum[]) realPropertyType.getEnumConstants());
-							for (Enum e : constants) {
-								if (e.toString().equals(valueAsString)) {
-									value = e;
-									break;
-								}
-							}
-						} else if (String.class.equals(valueClass)) {
-							value = valueAsString;
-						} else if (Location.class.equals(valueClass)) {
-							LocationEditor ed = new LocationEditor();
-							ed.setAsText(valueAsString);
-							value = ed.getValue();
-						} else if (Concept.class.equals(valueClass)) {
-							ConceptEditor ed = new ConceptEditor();
-							ed.setAsText(valueAsString);
-							value = ed.getValue();
-						} else if (Program.class.equals(valueClass)) {
-							ProgramEditor ed = new ProgramEditor();
-							ed.setAsText(valueAsString);
-							value = ed.getValue();
-						} else if (ProgramWorkflowState.class.equals(valueClass)) {
-							ProgramWorkflowStateEditor ed = new ProgramWorkflowStateEditor();
-							ed.setAsText(valueAsString);
-							value = ed.getValue();
-						} else if (EncounterType.class.equals(valueClass)) {
-							EncounterTypeEditor ed = new EncounterTypeEditor();
-							ed.setAsText(valueAsString);
-							value = ed.getValue();
-						} else if (Form.class.equals(valueClass)) {
-							FormEditor ed = new FormEditor();
-							ed.setAsText(valueAsString);
-							value = ed.getValue();
-						} else if (Drug.class.equals(valueClass)) {
-							DrugEditor ed = new DrugEditor();
-							ed.setAsText(valueAsString);
-							value = ed.getValue();
-						} else if (PersonAttributeType.class.equals(valueClass)) {
-							PersonAttributeTypeEditor ed = new PersonAttributeTypeEditor();
-							ed.setAsText(valueAsString);
-							value = ed.getValue();
-						} else if (Cohort.class.equals(valueClass)) {
-							CohortEditor ed = new CohortEditor();
-							ed.setAsText(valueAsString);
-							value = ed.getValue();
-						} else if (Date.class.equals(valueClass)) {
-							// TODO: this uses the date format from the current
-							// session, which could cause problems if the user
-							// changes it after searching.
-							DateFormat df = Context.getDateFormat(); // new
-							// SimpleDateFormat(OpenmrsConstants.OPENMRS_LOCALE_DATE_PATTERNS().get(Context.getLocale().toString().toLowerCase()),
-							// Context.getLocale());
-							CustomDateEditor ed = new CustomDateEditor(df, true, 10);
-							ed.setAsText(valueAsString);
-							value = ed.getValue();
-						} else if (LogicCriteria.class.equals(valueClass)) {
-							value = Context.getLogicService().parseString(valueAsString);
-						} else {
-							// TODO: Decide whether this is a hack. Currently
-							// setting Object arguments with a String
-							value = valueAsString;
-						}
-					}
-					catch (Exception ex) {
-						log.error("error converting \"" + valueAsString + "\" to " + valueClass, ex);
-						continue;
-					}
-					
-					if (value != null) {
-						
-						if (realPropertyType.isAssignableFrom(valueClass)) {
-							log.debug("setting value of " + sa.getName() + " to " + value);
-							try {
-								pd.getWriteMethod().invoke(pf, value);
-							}
-							catch (Exception ex) {
-								log.error(
-								    "Error setting value of " + sa.getName() + " to " + sa.getValue() + " -> " + value, ex);
-								continue;
-							}
-						} else if (Collection.class.isAssignableFrom(realPropertyType)) {
-							log.debug(sa.getName() + " is a Collection property");
-							// if realPropertyType is a collection, add this
-							// value to it (possibly after instantiating)
-							try {
-								Collection collection = (Collection) pd.getReadMethod().invoke(pf, (Object[]) null);
-								if (collection == null) {
-									// we need to instantiate this collection.
-									// I'm going with the following rules, which
-									// should be rethought:
-									// SortedSet -> TreeSet
-									// Set -> HashSet
-									// Otherwise -> ArrayList
-									if (SortedSet.class.isAssignableFrom(realPropertyType)) {
-										collection = new TreeSet();
-										log.debug("instantiated a TreeSet");
-										pd.getWriteMethod().invoke(pf, collection);
-									} else if (Set.class.isAssignableFrom(realPropertyType)) {
-										collection = new HashSet();
-										log.debug("instantiated a HashSet");
-										pd.getWriteMethod().invoke(pf, collection);
-									} else {
-										collection = new ArrayList();
-										log.debug("instantiated an ArrayList");
-										pd.getWriteMethod().invoke(pf, collection);
-									}
-								}
-								collection.add(value);
-							}
-							catch (Exception ex) {
-								log.error("Error instantiating collection for property " + sa.getName() + " whose class is "
-								        + realPropertyType, ex);
-								continue;
-							}
-						} else {
-							log.error(pf.getClass() + " . " + sa.getName() + " should be " + realPropertyType
-							        + " but is given as " + valueClass);
-						}
-					}
-				}
-			}
-			log.debug("Returning " + pf);
-			return pf;
-		}
-	}
-	
-	/**
 	 * Loops over the collection to check to see if the given object is in that collection. This
 	 * method <i>only</i> uses the .equals() method for comparison. This should be used in the
 	 * patient/person objects on their collections. Their collections are SortedSets which use the
 	 * compareTo method for equality as well. The compareTo method is currently optimized for
 	 * sorting, not for equality. A null <code>obj</code> will return false
-	 *
+	 * 
 	 * @param objects collection to loop over
 	 * @param obj Object to look for in the <code>objects</code>
 	 * @return true/false whether the given object is found
@@ -1930,7 +1744,7 @@ public class OpenmrsUtil {
 	/**
 	 * Get a serializer that will do the common type of serialization and deserialization. Cycles of
 	 * objects are taken into account
-	 *
+	 * 
 	 * @return Serializer to do the (de)serialization
 	 * @deprecated - Use OpenmrsSerializer from
 	 *             Context.getSerializationService.getDefaultSerializer() Note, this uses a
@@ -1944,7 +1758,7 @@ public class OpenmrsUtil {
 	/**
 	 * Get a short serializer that will only do the very basic serialization necessary. This is
 	 * controlled by the objects that are being serialized via the @Replace methods
-	 *
+	 * 
 	 * @return Serializer to do the short (de)serialization
 	 * @see OpenmrsConstants#SHORT_SERIALIZATION
 	 * @deprecated - Use OpenmrsSerializer from
@@ -1960,7 +1774,7 @@ public class OpenmrsUtil {
 	 * True/false whether the current serialization is supposed to be a short serialization. A
 	 * shortened serialization This should be called from methods marked with the @Replace notation
 	 * that take in a single <code>Map</code> parameter.
-	 *
+	 * 
 	 * @param sessionMap current serialization session
 	 * @return true/false whether or not to do the shortened serialization
 	 * @deprecated - use SerializationService and OpenmrsSerializer implementation for Serialization
@@ -1973,14 +1787,14 @@ public class OpenmrsUtil {
 	/**
 	 * Gets an out File object. If date is not provided, the current timestamp is used. If user is
 	 * not provided, the user id is not put into the filename. Assumes dir is already created
-	 *
+	 * 
 	 * @param dir directory to make the random filename in
 	 * @param date optional Date object used for the name
 	 * @param user optional User creating this file object
 	 * @return file new file that is able to be written to
 	 */
 	public static File getOutFile(File dir, Date date, User user) {
-		
+		Random gen = new Random();
 		File outFile;
 		do {
 			// format to print date in filenmae
@@ -2004,7 +1818,7 @@ public class OpenmrsUtil {
 			}
 			
 			// the end of the filename is a randome number between 0 and 10000
-			filename.append((int) (Math.random() * 10000));
+			filename.append(gen.nextInt() * 10000);
 			filename.append(".xml");
 			
 			outFile = new File(dir, filename.toString());
@@ -2019,13 +1833,14 @@ public class OpenmrsUtil {
 	
 	/**
 	 * Creates a relatively acceptable unique string of the give size
-	 *
+	 * 
 	 * @return unique string
 	 */
 	public static String generateUid(Integer size) {
+		Random gen = new Random();
 		StringBuffer sb = new StringBuffer(size);
 		for (int i = 0; i < size; i++) {
-			int ch = (int) (Math.random() * 62);
+			int ch = gen.nextInt() * 62;
 			if (ch < 10) {
 				// 0-9
 				sb.append(ch);
@@ -2041,7 +1856,7 @@ public class OpenmrsUtil {
 	
 	/**
 	 * Creates a uid of length 20
-	 *
+	 * 
 	 * @see #generateUid(Integer)
 	 */
 	public static String generateUid() {
@@ -2050,7 +1865,7 @@ public class OpenmrsUtil {
 	
 	/**
 	 * Post the given map of variables to the given url string
-	 *
+	 * 
 	 * @param urlString valid http url to post data to
 	 * @param dataToPost Map<String, String> of key value pairs to post to urlString
 	 * @return response from urlString after posting
@@ -2136,7 +1951,7 @@ public class OpenmrsUtil {
 	 * Convenience method to replace Properties.store(), which isn't UTF-8 compliant <br/>
 	 * NOTE: In Java 6, you will be able to pass the load() and store() methods a UTF-8
 	 * Reader/Writer object as an argument, making this method unnecessary.
-	 *
+	 * 
 	 * @param properties
 	 * @param file
 	 * @param comment
@@ -2166,25 +1981,15 @@ public class OpenmrsUtil {
 	 * Convenience method to replace Properties.store(), which isn't UTF-8 compliant NOTE: In Java
 	 * 6, you will be able to pass the load() and store() methods a UTF-8 Reader/Writer object as an
 	 * argument.
-	 *
+	 * 
 	 * @param properties
 	 * @param file
 	 * @param comment (which appears in comments in properties file)
 	 */
 	public static void storeProperties(Properties properties, OutputStream outStream, String comment) {
 		try {
-			OutputStreamWriter osw = new OutputStreamWriter(new BufferedOutputStream(outStream), "UTF-8");
-			Writer out = new BufferedWriter(osw);
-			if (comment != null) {
-				out.write("\n#" + comment + "\n");
-			}
-			out.write("#" + new Date() + "\n");
-			for (Map.Entry<Object, Object> e : properties.entrySet()) {
-				out.write(e.getKey() + "=" + e.getValue() + "\n");
-			}
-			out.write("\n");
-			out.flush();
-			out.close();
+			Charset utf8 = Charset.forName("UTF-8");
+			properties.store(new OutputStreamWriter(outStream, utf8), comment);
 		}
 		catch (FileNotFoundException fnfe) {
 			log.error("target file not found" + fnfe);
@@ -2204,11 +2009,12 @@ public class OpenmrsUtil {
 	 * file. <br/>
 	 * NOTE: In Java 6, you will be able to pass the load() and store() methods a UTF-8
 	 * Reader/Writer object as an argument, making this method unnecessary.
-	 *
+	 * 
 	 * @deprecated use {@link #loadProperties(Properties, File)}
 	 * @param props the properties object to write into
 	 * @param input the input stream to read from
 	 */
+	@Deprecated
 	public static void loadProperties(Properties props, InputStream input) {
 		try {
 			InputStreamReader reader = new InputStreamReader(input, "UTF-8");
@@ -2225,15 +2031,15 @@ public class OpenmrsUtil {
 	
 	/**
 	 * Convenience method used to load properties from the given file.
-	 *
+	 * 
 	 * @param props the properties object to be loaded into
 	 * @param propertyFile the properties file to read
 	 */
 	public static void loadProperties(Properties props, File propertyFile) {
-		InputStream inputStream = null;
+		InputStreamReader reader = null;
 		try {
-			inputStream = new FileInputStream(propertyFile);
-			InputStreamReader reader = new InputStreamReader(inputStream, "UTF-8");
+			InputStream inputStream = new FileInputStream(propertyFile);
+			reader = new InputStreamReader(inputStream, "UTF-8");
 			props.load(reader);
 		}
 		catch (FileNotFoundException fnfe) {
@@ -2247,8 +2053,8 @@ public class OpenmrsUtil {
 		}
 		finally {
 			try {
-				if (inputStream != null) {
-					inputStream.close();
+				if (reader != null) {
+					reader.close();
 				}
 			}
 			catch (IOException ioe) {
@@ -2261,7 +2067,7 @@ public class OpenmrsUtil {
 	 * By default java will escape colons and equal signs when writing properites files. <br/>
 	 * <br/>
 	 * This method turns escaped colons into colons and escaped equal signs into just equal signs.
-	 *
+	 * 
 	 * @param value the value portion of a properties file to fix
 	 * @return the value with escaped characters fixed
 	 */
@@ -2275,7 +2081,7 @@ public class OpenmrsUtil {
 	
 	/**
 	 * Utility method for getting the translation for the passed code
-	 *
+	 * 
 	 * @param code the message key to lookup
 	 * @param args the replacement values for the translation string
 	 * @return the message, or if not found, the code
@@ -2340,7 +2146,7 @@ public class OpenmrsUtil {
 	 * <th>null</th>
 	 * </tr>
 	 * </table>
-	 *
+	 * 
 	 * @param username user name of the user with password to validated
 	 * @param password string that will be validated
 	 * @param systemId system id of the user with password to be validated
@@ -2502,7 +2308,7 @@ public class OpenmrsUtil {
 	
 	/**
 	 * A null-safe and exception safe way to close an inputstream or an outputstream
-	 *
+	 * 
 	 * @param closableStream an InputStream or OutputStream to close
 	 */
 	public static void closeStream(Closeable closableStream) {
@@ -2520,7 +2326,7 @@ public class OpenmrsUtil {
 	 * Convert a stack trace into a shortened version for easier viewing and data storage, excluding
 	 * those lines we are least concerned with; should average about 60% reduction in stack trace
 	 * length
-	 *
+	 * 
 	 * @param stackTrace original stack trace from an error
 	 * @return shortened stack trace
 	 * @should return null if stackTrace is null
@@ -2560,7 +2366,7 @@ public class OpenmrsUtil {
 	 * 2) an environment variable called "{APPLICATIONNAME}_RUNTIME_PROPERTIES_FILE"
 	 * 3) {openmrs_app_dir}/{applicationName}_runtime.properties   // openmrs_app_dir is typically {user_home}/.OpenMRS
 	 * </pre>
-	 *
+	 * 
 	 * @see #getApplicationDataDirectory()
 	 * @param applicationName (defaults to "openmrs") the name of the running OpenMRS application,
 	 *            e.g. if you have deployed OpenMRS as a web application you would give the deployed
@@ -2606,7 +2412,7 @@ public class OpenmrsUtil {
 	
 	/**
 	 * Checks whether the system is running in test mode
-	 *
+	 * 
 	 * @return boolean
 	 */
 	
@@ -2616,7 +2422,7 @@ public class OpenmrsUtil {
 	
 	/**
 	 * Gets the full path and name of the runtime properties file.
-	 *
+	 * 
 	 * @param applicationName (defaults to "openmrs") the name of the running OpenMRS application,
 	 *            e.g. if you have deployed OpenMRS as a web application you would give the deployed
 	 *            context path here
@@ -2659,9 +2465,10 @@ public class OpenmrsUtil {
 		}
 		
 		// next look in the OpenMRS application data directory
-		pathName = OpenmrsUtil.getApplicationDataDirectory() + pathName;
+		File file = new File(getApplicationDataDirectory(), pathName);
+		pathName = file.getAbsolutePath();
 		log.debug("Attempting to look for property file from: " + pathName);
-		if (new File(pathName).exists()) {
+		if (file.exists()) {
 			return pathName;
 		} else {
 			log.warn("Unable to find properties file: " + pathName);
@@ -2681,7 +2488,7 @@ public class OpenmrsUtil {
 	
 	/**
 	 * Gets OpenMRS version name under test mode.
-	 *
+	 * 
 	 * @return String openmrs version number
 	 */
 	public static String getOpenMRSVersionInTestMode() {
@@ -2690,7 +2497,7 @@ public class OpenmrsUtil {
 	
 	/**
 	 * Performs a case insensitive Comparison of two strings taking care of null values
-	 *
+	 * 
 	 * @param s1 the string to compare
 	 * @param s2 the string to compare
 	 * @return
@@ -2711,7 +2518,7 @@ public class OpenmrsUtil {
 	/**
 	 * This method converts the given Long value to an Integer. If the Long value will not fit in an
 	 * Integer an exception is thrown
-	 *
+	 * 
 	 * @param longValue the value to convert
 	 * @return the long value in integer form.
 	 * @throws IllegalArgumentException if the long value does not fit into an integer
@@ -2726,7 +2533,7 @@ public class OpenmrsUtil {
 	/**
 	 * Checks if the passed in date's day of the year is the one that comes immediately before that
 	 * of the current date
-	 *
+	 * 
 	 * @param date the date to check
 	 * @since 1.9
 	 * @return true if the date comes immediately before the current date otherwise false
