@@ -1,15 +1,11 @@
 /**
- * The contents of this file are subject to the OpenMRS Public License
- * Version 1.0 (the "License"); you may not use this file except in
- * compliance with the License. You may obtain a copy of the License at
- * http://license.openmrs.org
+ * This Source Code Form is subject to the terms of the Mozilla Public License,
+ * v. 2.0. If a copy of the MPL was not distributed with this file, You can
+ * obtain one at http://mozilla.org/MPL/2.0/. OpenMRS is also distributed under
+ * the terms of the Healthcare Disclaimer located at http://openmrs.org/license.
  *
- * Software distributed under the License is distributed on an "AS IS"
- * basis, WITHOUT WARRANTY OF ANY KIND, either express or implied. See the
- * License for the specific language governing rights and limitations
- * under the License.
- *
- * Copyright (C) OpenMRS, LLC.  All Rights Reserved.
+ * Copyright (C) OpenMRS Inc. OpenMRS is a registered trademark and the OpenMRS
+ * graphic logo is a trademark of OpenMRS Inc.
  */
 package org.openmrs.api;
 
@@ -32,6 +28,7 @@ import junit.framework.Assert;
 import org.junit.Before;
 import org.junit.Ignore;
 import org.junit.Test;
+import org.openmrs.GlobalProperty;
 import org.openmrs.Person;
 import org.openmrs.PersonName;
 import org.openmrs.Provider;
@@ -41,6 +38,7 @@ import org.openmrs.api.context.Context;
 import org.openmrs.customdatatype.datatype.FreeTextDatatype;
 import org.openmrs.test.BaseContextSensitiveTest;
 import org.openmrs.test.Verifies;
+import org.openmrs.util.OpenmrsConstants;
 
 /**
  * This test class (should) contain tests for all of the ProviderService
@@ -310,7 +308,7 @@ public class ProviderServiceTest extends BaseContextSensitiveTest {
 	public void saveProvider_shouldSaveAProviderWithPersonAlone() throws Exception {
 		Provider provider = new Provider();
 		provider.setIdentifier("unique");
-		Person person = Context.getPersonService().getPerson(new Integer(999));
+		Person person = Context.getPersonService().getPerson(Integer.valueOf(999));
 		provider.setPerson(person);
 		service.saveProvider(provider);
 		Assert.assertNotNull(provider.getId());
@@ -562,5 +560,20 @@ public class ProviderServiceTest extends BaseContextSensitiveTest {
 	@Verifies(value = "should include retired providers if includeRetired is set to true", method = "getCountOfProviders(String,null)")
 	public void getCountOfProviders_shouldIncludeRetiredProvidersIfIncludeRetiredIsSetToTrue() throws Exception {
 		assertEquals(4, service.getCountOfProviders("provider").intValue());
+	}
+	
+	/**
+	 * @verifies get the unknown provider account
+	 * @see ProviderService#getUnknownProvider()
+	 */
+	@Test
+	public void getUnknownProvider_shouldGetTheUnknownProviderAccount() throws Exception {
+		Provider provider = new Provider();
+		provider.setName("Unknown Provider");
+		provider.setIdentifier("Test Unknown Provider");
+		provider = service.saveProvider(provider);
+		GlobalProperty gp = new GlobalProperty(OpenmrsConstants.GP_UNKNOWN_PROVIDER_UUID, provider.getUuid(), null);
+		Context.getAdministrationService().saveGlobalProperty(gp);
+		assertEquals(provider, service.getUnknownProvider());
 	}
 }
